# The-Gauntlet-Game

./: .gitignore  CMakeLists.txt  README.md
Glitter/Assets/: image_animation_splitter.py
Glitter/Assets/Healthbar/: Healthbar.xcf
Glitter/Assets/Portal/portal_texture_source/: process.py
Glitter/Assets/Projectiles/LaserTurret/: glow.xcf
Glitter/Assets/Ships/JetFighter/: Rocket.xcf
Glitter/Assets/Textures/Explosions/: image_splitter.py
Glitter/Assets/Textures/Projectiles/: image_splitter.py  process.py
Glitter/Assets/UI/Font/: Font.xcf
Glitter/Headers/: NIE.h  glitter.hpp
Glitter/Headers/CodeMonkeys/Engine/: Engine.h
Glitter/Headers/CodeMonkeys/Engine/Assets/: AnimatedTexture.h  ColorMaterial.h  LoopSubdivider.h  Material.h  Model3D.h  ModelLoader.h  ShaderHelpers.h  ShaderProgram.h  Texture.h  TextureMaterial.h
Glitter/Headers/CodeMonkeys/Engine/Collision/: BoundaryChecker.h  BoundingBox.h  GridCollisionDetector.h  ICollisionDetector.h  ICollisionRegion.h  ICollisionResponse.h  SimpleCollisionDetector.h
Glitter/Headers/CodeMonkeys/Engine/Control/: Controller.h  IControllable.h
Glitter/Headers/CodeMonkeys/Engine/Engine/: DrawObjectsIterator.h  FrameBufferRenderer.h  GameEngine.h  Quad.h  Renderer.h  Renderer3D.h  UpdateObjectsIterator.h  WorldObjectsIterator.h
Glitter/Headers/CodeMonkeys/Engine/Events/: EventDispatcher.h
Glitter/Headers/CodeMonkeys/Engine/Objects/: AmbientLight.h  Billboard.h  BillboardParticle.h  Camera3D.h  DirectionalLight.h  ILight3D.h  Object3D.h  Particle.h  ParticleEmitter.h  PhysicalObject3D.h  SpringArm.h
Glitter/Headers/CodeMonkeys/Engine/UI/: ProgressBar.h  Text.h
Glitter/Headers/CodeMonkeys/Lab04/: CrayonFactory.h
Glitter/Headers/CodeMonkeys/TheGauntlet/: GravityProjectile.h  Healthbar.h  IDamageable.h  IFireable.h  IFlyable.h  IInflicter.h  IScoreKeeper.h  ITriggerable.h  LaserCannon.h  LaserTurret.h  Projectile.h  RocketEngine.h  TheGauntletEngine.h  TheGauntletEngineSettings.h  TheGauntletWindow.h  Weapon.h
Glitter/Headers/CodeMonkeys/TheGauntlet/Collision/: AsteroidAsteroidCollisionResponse.h  ProjectileAsteroidCollisionResponse.h  ShipAsteroidCollisionResponse.h  ShipHealthCollisionResponse.h
Glitter/Headers/CodeMonkeys/TheGauntlet/Control/: KeyboardController.h
Glitter/Headers/CodeMonkeys/TheGauntlet/GameObjects/: Asteroid.h  AsteroidFactory.h  Portal.h  PortalFactory.h  Ship.h  ShipFactory.h
Glitter/Headers/CodeMonkeys/TheGauntlet/UI/: HealthBar.h  RechargeBar.h
Glitter/Headers/CodeMonkeys/TheGauntlet/Weapons/: AlternatingWeapon.h  Crosshairs.h  IDamageable.h  IInflicter.h  ITriggerable.h  LaserCannon.h  LaserTurret.h  Weapon.h
Glitter/Shaders/: basic.frag  basic.vert  billboard.frag  frame_buffer.frag  frame_buffer.vert  skybox.frag
Glitter/Sources/: main.cpp
Glitter/Sources/CodeMonkeys/Engine/Assets/: AnimatedTexture.cpp  ColorMaterial.cpp  LoopSubdivider.cpp  Material.cpp  Model3D.cpp  ModelLoader.cpp  ShaderHelpers.cpp  ShaderProgram.cpp  Texture.cpp  TextureMaterial.cpp
Glitter/Sources/CodeMonkeys/Engine/Collision/: BoundaryChecker.cpp  BoundingBox.cpp  BoundingMultiSphere.cpp  GridCollisionDetector.cpp  ICollisionDetector.cpp  ICollisionResponse.cpp  IntersectDetector.cpp  SimpleCollisionDetector.cpp
Glitter/Sources/CodeMonkeys/Engine/Control/: Controller.cpp
Glitter/Sources/CodeMonkeys/Engine/Engine/: DrawObjectsIterator.cpp  FrameBufferRenderer.cpp  GameEngine.cpp  Quad.cpp  Renderer.cpp  Renderer3D.cpp  UpdateObjectsIterator.cpp
Glitter/Sources/CodeMonkeys/Engine/Objects/: AmbientLight.cpp  Billboard.cpp  BillboardParticle.cpp  Camera3D.cpp  DirectionalLight.cpp  ILight3D.cpp  Object3D.cpp  Particle.cpp  ParticleEmitter.cpp  PhysicalObject3D.cpp  SpringArm.cpp
Glitter/Sources/CodeMonkeys/Engine/UI/: ProgressBar.cpp  Text.cpp
Glitter/Sources/CodeMonkeys/Lab04/: CrayonFactory.cpp
Glitter/Sources/CodeMonkeys/TheGauntlet/: GravityProjectile.cpp  Healthbar.cpp  IDamageable.cpp  IFireable.cpp  IFlyable.cpp  IInflicter.cpp  ITriggerable.cpp  LaserCannon.cpp  LaserTurret.cpp  Projectile.cpp  RocketEngine.cpp  TheGauntletEngine.cpp  TheGauntletEngineSettings.cpp  TheGauntletWindow.cpp  Weapon.cpp
Glitter/Sources/CodeMonkeys/TheGauntlet/Collision/: AsteroidAsteroidCollisionResponse.cpp  ProjectileAsteroidCollisionResponse.cpp  ShipAsteroidCollisionResponse.cpp  ShipHealthCollisionResponse.cpp  ShipPortalCollisionResponse.cpp
Glitter/Sources/CodeMonkeys/TheGauntlet/Control/: KeyboardController.cpp  MouseController.cpp
Glitter/Sources/CodeMonkeys/TheGauntlet/GameObjects/: Asteroid.cpp  AsteroidFactory.cpp  Health.cpp  Portal.cpp  PortalFactory.cpp  Ship.cpp  ShipFactory.cpp
Glitter/Sources/CodeMonkeys/TheGauntlet/UI/: HealthBar.cpp  RechargeBar.cpp  TimeDisplay.cpp
Glitter/Sources/CodeMonkeys/TheGauntlet/Weapons/: AlternatingWeapon.cpp  AntiMatterCannon.cpp  BeamGun.cpp  CrayonLauncher.cpp  Crosshairs.cpp  GravityProjectile.cpp  IDamageable.cpp  IInflicter.cpp  LaserCannon.cpp  LaserTurret.cpp  Projectile.cpp  Weapon.cpp
TheGauntlet/Assets/Portal/portal_texture_source/: rename.py
TheGauntlet/Assets/Projectiles/BeamGun/: glow.xcf
TheGauntlet/Assets/Shaders/: basic.frag
TheGauntlet/Assets/UI/Font/: Font.xcf  flip.py
TheGauntlet/Headers/: NIE.h  glitter.hpp
TheGauntlet/Headers/CodeMonkeys/Engine/Assets/: ColorMaterial.h  ModelLoader.h  ShaderProgram.h  TextureMaterial.h
TheGauntlet/Headers/CodeMonkeys/Engine/Collision/: BoundaryChecker.h  BoundingBox.h  BoundingMultiSphere.h  BoundingSphere.h  IntersectDetector.h
TheGauntlet/Headers/CodeMonkeys/Engine/Control/: Controller.h  IControllable.h
TheGauntlet/Headers/CodeMonkeys/Engine/Engine/: FrameBufferRenderer.h  GameEngine.h  Renderer.h  Renderer3D.h  Stopwatch.h  UpdateObjectsIterator.h
TheGauntlet/Headers/CodeMonkeys/TheGauntlet/: TheGauntletEngineSettings.h  TheGauntletWindow.h
TheGauntlet/Sources/: main.cpp
TheGauntlet/Sources/CodeMonkeys/TheGauntlet/: IFlyable.cpp  IScoreKeeper.cpp  RocketEngine.cpp  TheGauntletEngine.cpp  TheGauntletEngineSettings.cpp  TheGauntletWindow.cpp
(+81 files in other folders)
